fix: Remove unnecessary line-height from .statistic headings
- Removed the 'line-height' property from .statistic h2 and h3 elements,
as it was unnecessary and causing layout issues

--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -30,7 +30,6 @@
 .statistic h2,
 .statistic h3 {
   font-size: 20px;
-  line-height: 10px;
 }
 
 .statistic h2 {
